# mwdb-core-wafflemakers

./: .gitignore  CLAUDE.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-sandbox.yml  pyproject.toml
deploy/: DEPLOYMENT.md
deploy/docker/: Dockerfile
docker/phpdeobf/: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.server  composer.json  server.php  sync-from-source.sh
docker/phpdeobf/src/: ClosureRegistryPrepass.php  ControlFlowVisitor.php  Deobfuscator.php  EvalBlock.php  Resolver.php  Scope.php
docker/phpdeobf/tests/: globals-closure-eval.txt  globals.txt  reducers.txt  server_test.php
docker/plugins/phpdeobf/: README.md  __init__.py  api.ts  client.py  index.tsx  package.json  pyproject.toml  resource.py
docker/plugins/phpdeobf/components/: PhpDeobfTab.tsx
docker/plugins/phpdeobf/tests/: conftest.py  test_client.py  test_resource.py
docker/plugins/yarax_regex/: __init__.py  api.ts  index.tsx  package.json  pyproject.toml  resource.py  runner.py  tsconfig.json
docker/plugins/yarax_regex/components/: LintStrip.tsx  MatchList.tsx  RegexInput.tsx  SampleWithHighlights.tsx  YaraXRegexTab.tsx
docker/plugins/yarax_regex/tests/: conftest.py  test_resource.py  test_runner.py
docker/sandbox/: htaccess-override
docs/superpowers/plans/: 2026-04-15-tlsh-support.md  (+4 more)
mwdb/: app.py
mwdb/cli/: cli.py  evalhook_php.py  import_threat_library.py  normalize_php.py
mwdb/core/: normalize.py  normalize_hook.py  tlsh.py  util.py
mwdb/model/: file.py
mwdb/schema/: file.py
tests/backend/: test_api.py  test_phpdeobf.py  test_search.py
(+27 files in other folders)
