[project]
name = "phpdeobf"
version = "0.1.0"
description = "PHP Deobfuscator plugin for MWDB"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["phpdeobf"]
package-dir = {"phpdeobf" = "."}
